src/decaf/frontend/Parser.output
   0  $accept : Program $end

   1  Program : ClassList

   2  ClassList : ClassList ClassDef
   3            | ClassDef

   4  VariableDef : Variable ';'

   5  Variable : Type IDENTIFIER

   6  Type : INT
   7       | VOID
   8       | BOOL
   9       | STRING
  10       | CLASS IDENTIFIER
  11       | Type '[' ']'

  12  ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}'

  13  ExtendsClause : EXTENDS IDENTIFIER
  14                |

  15  FieldList : FieldList VariableDef
  16            | FieldList FunctionDef
  17            |

  18  Formals : VariableList
  19          |

  20  VariableList : VariableList ',' Variable
  21               | Variable

  22  FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock
  23              | Type IDENTIFIER '(' Formals ')' StmtBlock

  24  StmtBlock : '{' StmtList '}'

  25  StmtList : StmtList Stmt
  26           |

  27  Stmt : VariableDef
  28       | SimpleStmt ';'
  29       | IfStmt
  30       | WhileStmt
  31       | ForStmt
  32       | ReturnStmt ';'
  33       | PrintStmt ';'
  34       | BreakStmt ';'
  35       | StmtBlock

  36  SimpleStmt : LValue '=' Expr
  37             | Call
  38             |

  39  Receiver : Expr '.'
  40           |

  41  LValue : Receiver IDENTIFIER
  42         | Expr '[' Expr ']'

  43  Call : Receiver IDENTIFIER '(' Actuals ')'

  44  Expr : LValue
  45       | Call
  46       | Constant
  47       | SELF_PLUS Expr
  48       | SELF_MINUS Expr
  49       | Expr SELF_PLUS
  50       | Expr SELF_MINUS
  51       | Expr '+' Expr
  52       | Expr '-' Expr
  53       | Expr '*' Expr
  54       | Expr '/' Expr
  55       | Expr '%' Expr
  56       | Expr EQUAL Expr
  57       | Expr NOT_EQUAL Expr
  58       | Expr '<' Expr
  59       | Expr '>' Expr
  60       | Expr LESS_EQUAL Expr
  61       | Expr GREATER_EQUAL Expr
  62       | Expr AND Expr
  63       | Expr OR Expr
  64       | '(' Expr ')'
  65       | '-' Expr
  66       | '!' Expr
  67       | READ_INTEGER '(' ')'
  68       | READ_LINE '(' ')'
  69       | THIS
  70       | NEW IDENTIFIER '(' ')'
  71       | NEW Type '[' Expr ']'
  72       | INSTANCEOF '(' Expr ',' IDENTIFIER ')'
  73       | '(' CLASS IDENTIFIER ')' Expr

  74  Constant : LITERAL
  75           | NULL

  76  Actuals : ExprList
  77          |

  78  ExprList : ExprList ',' Expr
  79           | Expr

  80  WhileStmt : WHILE '(' Expr ')' Stmt

  81  ForStmt : FOR '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt

  82  BreakStmt : BREAK

  83  IfStmt : IF '(' Expr ')' Stmt ElseClause

  84  ElseClause : ELSE Stmt
  85             |

  86  ReturnStmt : RETURN Expr
  87             | RETURN

  88  PrintStmt : PRINT '(' ExprList ')'

state 0
	$accept : . Program $end  (0)

	CLASS  shift 1
	.  error

	Program  goto 2
	ClassList  goto 3
	ClassDef  goto 4


state 1
	ClassDef : CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (12)

	IDENTIFIER  shift 5
	.  error


state 2
	$accept : Program . $end  (0)

	$end  accept


state 3
	Program : ClassList .  (1)
	ClassList : ClassList . ClassDef  (2)

	CLASS  shift 1
	$end  reduce 1

	ClassDef  goto 6


state 4
	ClassList : ClassDef .  (3)

	.  reduce 3


state 5
	ClassDef : CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (12)
	ExtendsClause : .  (14)

	EXTENDS  shift 7
	'{'  reduce 14

	ExtendsClause  goto 8


state 6
	ClassList : ClassList ClassDef .  (2)

	.  reduce 2


state 7
	ExtendsClause : EXTENDS . IDENTIFIER  (13)

	IDENTIFIER  shift 9
	.  error


state 8
	ClassDef : CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (12)

	'{'  shift 10
	.  error


state 9
	ExtendsClause : EXTENDS IDENTIFIER .  (13)

	.  reduce 13


state 10
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (12)
	FieldList : .  (17)

	.  reduce 17

	FieldList  goto 11


state 11
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (12)
	FieldList : FieldList . VariableDef  (15)
	FieldList : FieldList . FunctionDef  (16)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	STATIC  shift 17
	'}'  shift 18
	.  error

	VariableDef  goto 19
	Variable  goto 20
	Type  goto 21
	FunctionDef  goto 22


state 12
	Type : VOID .  (7)

	.  reduce 7


state 13
	Type : BOOL .  (8)

	.  reduce 8


state 14
	Type : INT .  (6)

	.  reduce 6


state 15
	Type : STRING .  (9)

	.  reduce 9


state 16
	Type : CLASS . IDENTIFIER  (10)

	IDENTIFIER  shift 23
	.  error


state 17
	FunctionDef : STATIC . Type IDENTIFIER '(' Formals ')' StmtBlock  (22)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	.  error

	Type  goto 24


state 18
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (12)

	.  reduce 12


state 19
	FieldList : FieldList VariableDef .  (15)

	.  reduce 15


state 20
	VariableDef : Variable . ';'  (4)

	';'  shift 25
	.  error


state 21
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)
	FunctionDef : Type . IDENTIFIER '(' Formals ')' StmtBlock  (23)

	IDENTIFIER  shift 26
	'['  shift 27
	.  error


state 22
	FieldList : FieldList FunctionDef .  (16)

	.  reduce 16


state 23
	Type : CLASS IDENTIFIER .  (10)

	.  reduce 10


state 24
	Type : Type . '[' ']'  (11)
	FunctionDef : STATIC Type . IDENTIFIER '(' Formals ')' StmtBlock  (22)

	IDENTIFIER  shift 28
	'['  shift 27
	.  error


state 25
	VariableDef : Variable ';' .  (4)

	.  reduce 4


state 26
	Variable : Type IDENTIFIER .  (5)
	FunctionDef : Type IDENTIFIER . '(' Formals ')' StmtBlock  (23)

	'('  shift 29
	';'  reduce 5


state 27
	Type : Type '[' . ']'  (11)

	']'  shift 30
	.  error


state 28
	FunctionDef : STATIC Type IDENTIFIER . '(' Formals ')' StmtBlock  (22)

	'('  shift 31
	.  error


state 29
	FunctionDef : Type IDENTIFIER '(' . Formals ')' StmtBlock  (23)
	Formals : .  (19)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	')'  reduce 19

	Variable  goto 32
	Type  goto 33
	Formals  goto 34
	VariableList  goto 35


state 30
	Type : Type '[' ']' .  (11)

	.  reduce 11


state 31
	FunctionDef : STATIC Type IDENTIFIER '(' . Formals ')' StmtBlock  (22)
	Formals : .  (19)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	')'  reduce 19

	Variable  goto 32
	Type  goto 33
	Formals  goto 36
	VariableList  goto 35


state 32
	VariableList : Variable .  (21)

	.  reduce 21


state 33
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)

	IDENTIFIER  shift 37
	'['  shift 27
	.  error


state 34
	FunctionDef : Type IDENTIFIER '(' Formals . ')' StmtBlock  (23)

	')'  shift 38
	.  error


state 35
	Formals : VariableList .  (18)
	VariableList : VariableList . ',' Variable  (20)

	','  shift 39
	')'  reduce 18


state 36
	FunctionDef : STATIC Type IDENTIFIER '(' Formals . ')' StmtBlock  (22)

	')'  shift 40
	.  error


state 37
	Variable : Type IDENTIFIER .  (5)

	.  reduce 5


state 38
	FunctionDef : Type IDENTIFIER '(' Formals ')' . StmtBlock  (23)

	'{'  shift 41
	.  error

	StmtBlock  goto 42


state 39
	VariableList : VariableList ',' . Variable  (20)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	.  error

	Variable  goto 43
	Type  goto 33


state 40
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' . StmtBlock  (22)

	'{'  shift 41
	.  error

	StmtBlock  goto 44


state 41
	StmtBlock : '{' . StmtList '}'  (24)
	StmtList : .  (26)

	.  reduce 26

	StmtList  goto 45


state 42
	FunctionDef : Type IDENTIFIER '(' Formals ')' StmtBlock .  (23)

	.  reduce 23


state 43
	VariableList : VariableList ',' Variable .  (20)

	.  reduce 20


state 44
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock .  (22)

	.  reduce 22


state 45
	StmtBlock : '{' StmtList . '}'  (24)
	StmtList : StmtList . Stmt  (25)
	SimpleStmt : .  (38)
	Receiver : .  (40)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	NULL  shift 46
	THIS  shift 47
	WHILE  shift 48
	FOR  shift 49
	IF  shift 50
	RETURN  shift 51
	BREAK  shift 52
	NEW  shift 53
	PRINT  shift 54
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	SELF_PLUS  shift 59
	SELF_MINUS  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	'{'  shift 41
	'}'  shift 64
	IDENTIFIER  reduce 40
	';'  reduce 38

	VariableDef  goto 65
	Variable  goto 20
	Type  goto 33
	StmtBlock  goto 66
	Stmt  goto 67
	SimpleStmt  goto 68
	IfStmt  goto 69
	WhileStmt  goto 70
	ForStmt  goto 71
	ReturnStmt  goto 72
	PrintStmt  goto 73
	BreakStmt  goto 74
	LValue  goto 75
	Expr  goto 76
	Call  goto 77
	Receiver  goto 78
	Constant  goto 79


state 46
	Constant : NULL .  (75)

	.  reduce 75


state 47
	Expr : THIS .  (69)

	.  reduce 69


state 48
	WhileStmt : WHILE . '(' Expr ')' Stmt  (80)

	'('  shift 80
	.  error


state 49
	ForStmt : FOR . '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (81)

	'('  shift 81
	.  error


state 50
	IfStmt : IF . '(' Expr ')' Stmt ElseClause  (83)

	'('  shift 82
	.  error


state 51
	ReturnStmt : RETURN . Expr  (86)
	ReturnStmt : RETURN .  (87)
	Receiver : .  (40)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	SELF_PLUS  shift 59
	SELF_MINUS  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	IDENTIFIER  reduce 40
	';'  reduce 87

	LValue  goto 83
	Expr  goto 84
	Call  goto 85
	Receiver  goto 78
	Constant  goto 79


state 52
	BreakStmt : BREAK .  (82)

	.  reduce 82


state 53
	Expr : NEW . IDENTIFIER '(' ')'  (70)
	Expr : NEW . Type '[' Expr ']'  (71)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	IDENTIFIER  shift 86
	.  error

	Type  goto 87


state 54
	PrintStmt : PRINT . '(' ExprList ')'  (88)

	'('  shift 88
	.  error


state 55
	Expr : READ_INTEGER . '(' ')'  (67)

	'('  shift 89
	.  error


state 56
	Expr : READ_LINE . '(' ')'  (68)

	'('  shift 90
	.  error


state 57
	Constant : LITERAL .  (74)

	.  reduce 74


state 58
	Expr : INSTANCEOF . '(' Expr ',' IDENTIFIER ')'  (72)

	'('  shift 91
	.  error


state 59
	Expr : SELF_PLUS . Expr  (47)
	Receiver : .  (40)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	SELF_PLUS  shift 59
	SELF_MINUS  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	IDENTIFIER  reduce 40

	LValue  goto 83
	Expr  goto 92
	Call  goto 85
	Receiver  goto 78
	Constant  goto 79


state 60
	Expr : SELF_MINUS . Expr  (48)
	Receiver : .  (40)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	SELF_PLUS  shift 59
	SELF_MINUS  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	IDENTIFIER  reduce 40

	LValue  goto 83
	Expr  goto 93
	Call  goto 85
	Receiver  goto 78
	Constant  goto 79


state 61
	Expr : '-' . Expr  (65)
	Receiver : .  (40)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	SELF_PLUS  shift 59
	SELF_MINUS  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	IDENTIFIER  reduce 40

	LValue  goto 83
	Expr  goto 94
	Call  goto 85
	Receiver  goto 78
	Constant  goto 79


state 62
	Expr : '!' . Expr  (66)
	Receiver : .  (40)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	SELF_PLUS  shift 59
	SELF_MINUS  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	IDENTIFIER  reduce 40

	LValue  goto 83
	Expr  goto 95
	Call  goto 85
	Receiver  goto 78
	Constant  goto 79


state 63
	Expr : '(' . Expr ')'  (64)
	Expr : '(' . CLASS IDENTIFIER ')' Expr  (73)
	Receiver : .  (40)

	CLASS  shift 96
	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	SELF_PLUS  shift 59
	SELF_MINUS  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	IDENTIFIER  reduce 40

	LValue  goto 83
	Expr  goto 97
	Call  goto 85
	Receiver  goto 78
	Constant  goto 79


state 64
	StmtBlock : '{' StmtList '}' .  (24)

	.  reduce 24


state 65
	Stmt : VariableDef .  (27)

	.  reduce 27


state 66
	Stmt : StmtBlock .  (35)

	.  reduce 35


state 67
	StmtList : StmtList Stmt .  (25)

	.  reduce 25


state 68
	Stmt : SimpleStmt . ';'  (28)

	';'  shift 98
	.  error


state 69
	Stmt : IfStmt .  (29)

	.  reduce 29


state 70
	Stmt : WhileStmt .  (30)

	.  reduce 30


state 71
	Stmt : ForStmt .  (31)

	.  reduce 31


state 72
	Stmt : ReturnStmt . ';'  (32)

	';'  shift 99
	.  error


state 73
	Stmt : PrintStmt . ';'  (33)

	';'  shift 100
	.  error


state 74
	Stmt : BreakStmt . ';'  (34)

	';'  shift 101
	.  error


state 75
	SimpleStmt : LValue . '=' Expr  (36)
	Expr : LValue .  (44)

	'='  shift 102
	AND  reduce 44
	OR  reduce 44
	LESS_EQUAL  reduce 44
	GREATER_EQUAL  reduce 44
	EQUAL  reduce 44
	NOT_EQUAL  reduce 44
	SELF_PLUS  reduce 44
	SELF_MINUS  reduce 44
	'+'  reduce 44
	'-'  reduce 44
	'*'  reduce 44
	'/'  reduce 44
	'%'  reduce 44
	'>'  reduce 44
	'<'  reduce 44
	'.'  reduce 44
	'['  reduce 44


state 76
	Receiver : Expr . '.'  (39)
	LValue : Expr . '[' Expr ']'  (42)
	Expr : Expr . SELF_PLUS  (49)
	Expr : Expr . SELF_MINUS  (50)
	Expr : Expr . '+' Expr  (51)
	Expr : Expr . '-' Expr  (52)
	Expr : Expr . '*' Expr  (53)
	Expr : Expr . '/' Expr  (54)
	Expr : Expr . '%' Expr  (55)
	Expr : Expr . EQUAL Expr  (56)
	Expr : Expr . NOT_EQUAL Expr  (57)
	Expr : Expr . '<' Expr  (58)
	Expr : Expr . '>' Expr  (59)
	Expr : Expr . LESS_EQUAL Expr  (60)
	Expr : Expr . GREATER_EQUAL Expr  (61)
	Expr : Expr . AND Expr  (62)
	Expr : Expr . OR Expr  (63)

	AND  shift 103
	OR  shift 104
	LESS_EQUAL  shift 105
	GREATER_EQUAL  shift 106
	EQUAL  shift 107
	NOT_EQUAL  shift 108
	SELF_PLUS  shift 109
	SELF_MINUS  shift 110
	'+'  shift 111
	'-'  shift 112
	'*'  shift 113
	'/'  shift 114
	'%'  shift 115
	'>'  shift 116
	'<'  shift 117
	'.'  shift 118
	'['  shift 119
	.  error


state 77
	SimpleStmt : Call .  (37)
	Expr : Call .  (45)
